// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestConnector normalize function parses json objects to be consistent with our naming standards 1`] = `
Object {
  "anotherKey": "yo-yo",
  "recursiveYo": Array [
    Object {
      "yes": false,
    },
    Object {
      "noWay": true,
    },
    Array [
      Object {
        "throwForALoop": "huh?",
      },
    ],
  ],
  "someKey": "Yo yo",
}
`;

exports[`RestConnector patches data 1`] = `
Array [
  "https://google.com/endpoint",
  Object {
    "body": "{\\"request\\":\\"it worked!\\"}",
    "headers": Object {
      "Content-Type": "application/json",
      "user-agent": "Apollos",
    },
    "method": "PATCH",
  },
]
`;

exports[`RestConnector patches data 2`] = `
Object {
  "response": "it worked!",
}
`;

exports[`RestConnector posts data 1`] = `
Array [
  "https://google.com/endpoint",
  Object {
    "body": "{\\"request\\":\\"it worked!\\"}",
    "headers": Object {
      "Content-Type": "application/json",
      "user-agent": "Apollos",
    },
    "method": "POST",
  },
]
`;

exports[`RestConnector posts data 2`] = `
Object {
  "response": "it worked!",
}
`;

exports[`RestConnector puts data 1`] = `
Array [
  "https://google.com/endpoint",
  Object {
    "body": "{\\"request\\":\\"it worked!\\"}",
    "headers": Object {
      "Content-Type": "application/json",
      "user-agent": "Apollos",
    },
    "method": "PUT",
  },
]
`;

exports[`RestConnector puts data 2`] = `
Object {
  "response": "it worked!",
}
`;
